#pragma once

#include <stdint.h>

enum PadSide : uint8_t {
  PAD_LEFT  = 0,
  PAD_RIGHT = 1
};